# headunit

./: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/gb/xxy/hr/: GenericFileProvider.kt  GenericMessage.java  HeadunitActivity.java  HeadunitActivity.kt  HeadunitService.java  LocationProtos.java  MediaServices.java  NavStatServices.java  Player.java  Player.kt  PrefrenceActivity.kt  SelfPlayer.java  WifiReceiver.kt  Wifip2plaunch.java  hu_act.java  hu_pref.kt  mylog.java  new_hu_tra.java  player.java  self_player.java
app/src/main/jni/: CMakeLists.txt  hu_mai.c
gradle/wrapper/: gradle-wrapper.properties
